Открдактировал table.yaml

--- a/table.yaml
+++ b/table.yaml
@@ -1,18 +1,29 @@
 ---
+atoms:
+  - {name: H, mass: 1.00797}
+  - {name: N, mass: 14.0067}
+  - {name: O, mass: 15.9994}
+  - {name: C, mass: 12.011}
+  - {name: S, mass: 32.06}
+  - {name: Cl, mass: 35.453}
+  - {name: He, mass: 4.002602}
+
+
 elements:
-  O:
+  - O:
+    name: "O"
     composition: {O: 1}
-    atom-mass: 15.9994
-    delta-H:
-      - 0: 246.783
-      - 298.15: 249.170
-    S: 0.155
-    Temperature-ranges:
-      - [500, 6000]
-      - [1000, 20000]
-    polynom-coef:
-      - [214.7962, 21.2418, 0.0002034, 0.05871, -2.5011, 2.558, -0.531]
-      - [211.1400, 18.5740, 0.0115484, -0.48578, 4.2308,-0.744, 0.044]
-  next-element:
-    ...
+    thermo:
+      x: -4
+      delta-H:
+        - 0: 246.783
+        - 298.15: 249.170
+      S: 0.155
+      Temperature-ranges:
+        - [500, 6000]
+        - [1000, 20000]
+      polynom-coef:
+        - [214.7962, 21.2418, 0.0002034, 0.05871, -2.5011, 2.558, -0.531]
+        - [211.1400, 18.5740, 0.0115484, -0.48578, 4.2308,-0.744, 0.044]
+        
 ...
